mon 1ere site web

--- a/Compétences.html
+++ b/Compétences.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style_Compétences.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -14,16 +16,50 @@
       <nav>
         <ul>
           <li><a href="./index.html">Accueil</a></li>
-          <li><a href="#education" >Education</a></li>
+          <li><a href="education" >Education</a></li>
           <li><a href="./Experiences.html">Experiences</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="services">Services</a></li>
           <li><a href="./Compétences.html">Compétences</a></li>
-          <li><a href="#Projets">Projets</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-
-   
+    <div class="card-container">
+      <div class="card1">
+      <p>
+        Mohamed Khadhri, titulaire d'une licence appliquée en génie électrique obtenue en 2012 à l'ISET Mahdia, 
+        a consolidé ses compétences à travers diverses formations spécialisées. En 2013,
+         il a suivi une formation en réparation et fabrication des cartes électroniques chez Bello Formation. Entre 2017 et 2019, 
+         il a élargi son expertise en participant à des formations en réparation GSM dispensées par FORMATEK et NEW Formation, 
+         notamment en suivant le programme IPC 610-C.
+      </p>
+     </div>   
+        <div class="card2">
+          <p>
+          Doté de compétences avancées dans des outils tels que SAP, STEP 7, Proteus Professional, PIC C, LabVIEW et Flash Loader,
+          Mohamed s'est affirmé en tant que technicien en génie électrique. 
+          Sa maîtrise de ces technologies lui permet d'assumer des responsabilités variées dans le domaine de l'automatisme et de l'informatique industrielle.
+          </p>
+          
+        </div>
+        <div class="card3">
+          <p>
+          Basé à La Soukra, Mohamed Khadhri est accessible par téléphone au 55042770. Pour toute correspondance, 
+          son adresse email est mohamed.24292770@gmail.com.
+          </p>
+        </div>
+        
+        <div class="card4">
+          <p>
+          Polyglotte, Mohamed maîtrise le français et l'anglais. Outre son expertise technique, 
+          il se distingue par son esprit d'équipe et sa passion pour la résolution de problèmes.
+          En dehors de son parcours professionnel, il démontre un intérêt marqué pour les activités sportives.
+          Ces compétences techniques et son profil polyvalent font de Mohamed un professionnel qualifié et engagé dans le domaine de l'automatisme et de l'informatique industrielle.
+          </p>
+        </div>
+      </div>  
+      <div class="button-container text-center fixed-bottom mb-3">
+        <a href="./images/mohamed khadhri.pdf" class="btn btn-light" download>Télécharger CV</a>
+    </div> 
   </body>
 </html>
