--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style_index.css" />
   </head>
   <body>
     <header>
@@ -18,12 +18,13 @@
           <li><a href="./Experiences.html">Experiences</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="./Compétences.html">Compétences</a></li>
-          <li><a href="#Projets">Projets</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-
+    
+      <h2>"Apprendre, c'est la seule chose qui reste même lorsque l'on a tout perdu."</h2>
+    
    
   </body>
 </html>
